# This Makefile.am is in the public domain
EXTRA_DIST = \
  arabic.jpg \
  japanese-kanji.jpg \
  scrap1_18.html \
  scrap1_29.html \
  scrap1_3.html \
  scrap1_9.html \
  belarusian.jpg \
  korean.jpg \
  scrap1_19.html \
  scrap1_2.html \
  scrap1_40.html \
  scrap1_U.0.html \
  bulgarian.jpg \
  scrap1_1.html \
  scrap1_30.html \
  scrap1_41.html \
  scrap1_U.1.html \
  category.jpg \
  russian.jpg \
  scrap1_20.html \
  scrap1_31.html \
  scrap1_42.html \
  serbian-croatian.jpg \
  chinese-simplified.jpg \
  scrap1_10.html \
  scrap1_21.html \
  scrap1_32.html \
  scrap1_43.html \
  song-book-jutta-scrunch-crop.jpg \
  chinese-traditional.jpg \
  scrap1_11.html \
  scrap1_22.html \
  scrap1_33.html \
  scrap1_46.html \
  tamil.jpg \
  code.jpg \
  scrap1_12.html \
  scrap1_23.html \
  scrap1_34.html \
  scrap1_47.html \
  ukrainian.jpg \
  COPYING \
  scrap1_13.html \
  scrap1_24.html \
  scrap1_35.html \
  scrap1_4.html \
  scrap1_14.html \
  scrap1_25.html \
  scrap1_36.html \
  scrap1_5.html \
  farsi.jpg \
  scrap1_15.html \
  scrap1_26.html \
  scrap1_37.html \
  scrap1_6.html \
  greek.jpg \
  scrap1_16.html \
  scrap1_27.html \
  scrap1_38.html \
  scrap1_7.html \
  japanese-kana.jpg \
  scrap1_17.html \
  scrap1_28.html \
  scrap1_39.html \
  scrap1_8.html
